Option to attach a console to the game's process
(console is attached to the game's stdout, so for it to display anything the game must be launched with the `debug` option, otherwise the output will be written to a log file and the console will have nothing to display)

+ Block inputs when a download or initialization is in progress
+ Fetch 100 (max allowed by the API) latest game releases instead of 10
+ New game version storage / update mechanism